Mejora en el logo

--- a/index.html
+++ b/index.html
@@ -62,6 +62,24 @@
             <p>Con esta guía empezarás un proyecto propio en local y subirás cambios a tu repositorio en GitHub. <strong>Trabajarás en colaboración</strong> con personas de todo el mundo, haciendo Fork, Pull request y Merge. Además podrás alojar tu proyecto en un subdominio de GitHub, igual que lo está esta guía.</p>
             <p>No encontrarás explicaciones teóricas explicando que es un sistema de control de versiones o funcionan las entrañas de GitHub. Pero sí encontrarás enlaces a varias fuentes en vídeo y texto que bien seguro te ayudarán asimilar mejor los conceptos.</p>
         </div>
+        <div class="social">
+            <div class="consejos">
+                <ul>
+                    <li><a href="#video">Clases en vídeo</a></li>
+                    <li><a href="#libro">Libros y guías</a></li>
+                    <li><a href="#comandos">Resumen de comandos</a></li>
+                </ul>
+            </div>
+            <div class="compartir">
+                <p>Compártelo</p>
+                <div class="facebook">
+                    <div class="fb-like" data-href="http://asiestudio.site88.net/" data-width="50" data-layout="button_count" data-action="recommend" data-show-faces="false" data-share="false"></div>
+                </div>
+                <div class="twitter">
+                    <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://asiestudio.site88.net/" data-text="IniciaGit | Hacer un commit es como pegar un tiro" data-via="jpcpamies" data-lang="es">Twittear</a><script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+                </div>
+            </div>
+        </div>
     </article>
     <article id='video'>
         <div class="encabezado">
@@ -105,6 +123,24 @@
                 </div>
             </div>
         </div>
+        <div class="social">
+            <div class="consejos">
+                <ul>
+                    <li><a href="#video">Clases en vídeo</a></li>
+                    <li><a href="#libro">Libros y guías</a></li>
+                    <li><a href="#comandos">Resumen de comandos</a></li>
+                </ul>
+            </div>
+            <div class="compartir">
+                <p>Compártelo</p>
+                <div class="facebook">
+                    <div class="fb-like" data-href="http://asiestudio.site88.net/" data-width="50" data-layout="button_count" data-action="recommend" data-show-faces="false" data-share="false"></div>
+                </div>
+                <div class="twitter">
+                    <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://asiestudio.site88.net/" data-text="IniciaGit | Hacer un commit es como pegar un tiro" data-via="jpcpamies" data-lang="es">Twittear</a><script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+                </div>
+            </div>
+        </div>
     </article>
     <article id='libro'>
         <div class="encabezado">
@@ -142,6 +178,25 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="social">
+            <div class="consejos">
+                <ul>
+                    <li><a href="#video">Clases en vídeo</a></li>
+                    <li><a href="#libro">Libros y guías</a></li>
+                    <li><a href="#comandos">Resumen de comandos</a></li>
+                </ul>
+            </div>
+            <div class="compartir">
+                <p>Compártelo</p>
+                <div class="facebook">
+                    <div class="fb-like" data-href="http://asiestudio.site88.net/" data-width="50" data-layout="button_count" data-action="recommend" data-show-faces="false" data-share="false"></div>
+                </div>
+                <div class="twitter">
+                    <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://asiestudio.site88.net/" data-text="IniciaGit | Hacer un commit es como pegar un tiro" data-via="jpcpamies" data-lang="es">Twittear</a><script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+                </div>
+            </div>
+        </div>
     </article>
     <article id="comandos">
         <div class="encabezado">
@@ -208,9 +263,6 @@
                 <div class="twitter">
                     <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://asiestudio.site88.net/" data-text="IniciaGit | Hacer un commit es como pegar un tiro" data-via="jpcpamies" data-lang="es">Twittear</a><script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
                 </div>
-            </div>
-            <div class="comentario">
-                 <div id="disqus_thread"></div>
             </div>
         </div>
     </article>
