Todos los estilos terminados
Listo para el contenido

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                 <div class="grupo">Libros</div>
                 <div class="ejemplar">
                     <div class="portada">
-                        <a href="http://git-scm.com/book/es?codekitCB=406257843.239258" target='blanck'><img src="http://git-scm.com/images/books/pro-git@2x.jpg" alt="Pro Git"></a>
+                        <a href="http://git-scm.com/book/es?codekitCB=406257843.239258" target='blanck'><img src="img/progit.jpg" alt="Pro Git"></a>
                     </div>
                     <div class="detalles">
                        <p class="titulo">Pro Git</p>
